align issue fix

--- a/src/Components/Symptoms/Symptoms.css
+++ b/src/Components/Symptoms/Symptoms.css
@@ -1,17 +1,17 @@
-* {
-  text-align: justify;
-}
+
 .container {
   margin-top: 30px;
 }
 
 .left-side {
   /* margin-left: 20px !important; */
+  text-align: justify;
 }
 
 .right-side {
   /* border: 1px solid red; */
   padding: 0 20px;
+  text-align: justify;
 }
 .main-heading {
   margin-bottom: 20px;
